# viz

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  build_app.sh  docker-compose.yaml  run_app.sh  run_env.sh
docker/: Dockerfile  configure_zsh.sh  delete.sh  install_dependencies.sh  install_deps.sh  setup_build_tools.sh  setup_conan.sh  setup_locale.sh  setup_tools.sh  setup_zsh.sh
scripts/: install_app.sh
scripts/dependencies/: install_cmake.sh  install_qt.sh
src/: main.cc
src/libs/: CMakeLists.txt
